@@ -1,5 +1,10 @@
 2004-11-27  Benoît Dejean  <tazforever@dlfp.org>
 
+	* src/procactions.c: (renice_single_process): Changed error message.
+	Closes #123268.
+
+2004-11-27  Benoît Dejean  <tazforever@dlfp.org>
+
 	* src/interface.c:
 	* src/callbacks.c: (kill_process_helper), (cb_renice),
 	(cb_end_process), (cb_kill_process),
